<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/details_margin_start"
        tools:context=".screens.details.DetailsFragment">


        <TextView
            android:id="@+id/tv_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/details_tv_name"
            app:layout_constraintBottom_toTopOf="@+id/et_details_name"
            app:layout_constraintStart_toStartOf="@+id/et_details_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/et_details_name"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/tv_details_size"
            app:layout_constraintStart_toStartOf="@+id/tv_details_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_name" />

        <EditText
            android:id="@+id/et_details_size"
            android:layout_width="287dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/size"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/tv_details_company"
            app:layout_constraintStart_toStartOf="@+id/tv_details_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_size" />

        <EditText
            android:id="@+id/et_details_company"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/tv_details_description"
            app:layout_constraintStart_toStartOf="@+id/tv_details_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_company" />

        <EditText
            android:id="@+id/et_details_description"
            android:layout_width="286dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_description" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_details_description"
            tools:layout_editor_absoluteX="-44dp">

            <Button
                android:id="@+id/btn_details_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="596dp" />

            <Button
                android:id="@+id/btn_details_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                tools:layout_editor_absoluteX="251dp"
                tools:layout_editor_absoluteY="604dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_details_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_tv_size"
            app:layout_constraintBottom_toTopOf="@+id/et_details_size"
            app:layout_constraintStart_toStartOf="@+id/et_details_size"
            app:layout_constraintTop_toBottomOf="@+id/et_details_name" />

        <TextView
            android:id="@+id/tv_details_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_tv_company"
            app:layout_constraintBottom_toTopOf="@+id/et_details_company"
            app:layout_constraintStart_toStartOf="@+id/et_details_company"
            app:layout_constraintTop_toBottomOf="@+id/et_details_size" />

        <TextView
            android:id="@+id/tv_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_tv_description"
            app:layout_constraintBottom_toTopOf="@+id/et_details_description"
            app:layout_constraintStart_toStartOf="@+id/et_details_description"
            app:layout_constraintTop_toBottomOf="@+id/et_details_company" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>