<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome.InstructionsFragment">

        <Button
            android:id="@+id/btn_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_text1" />

        <TextView
            android:id="@+id/tv_welcome_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_bottom"
            app:layout_constraintBottom_toTopOf="@+id/btn_welcome"
            app:layout_constraintEnd_toEndOf="@+id/btn_welcome"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="@+id/btn_welcome"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_upper"
            app:layout_constraintBottom_toTopOf="@+id/tv_welcome_text1"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcome_text1"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome_text1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>